--- a/webapp/view/Startpage.view.xml
+++ b/webapp/view/Startpage.view.xml
@@ -9,7 +9,8 @@
 			class="sapUiTinyMarginBegin"/>
 			<layout:HorizontalLayout allowWrapping="true">
 				<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop" 
-				header="{i18n>startpagePFTileTitle}" subheader="{i18n>startpagePFTileSubTitle}">
+				header="{i18n>startpagePFTileTitle}" subheader="{i18n>startpagePFTileSubTitle}"
+                press=".onNavToProcessFlow">
 					<tileContent>
 						<TileContent>
 							<content>
@@ -21,9 +22,10 @@
 						</TileContent>
 					</tileContent>
 				</GenericTile>
-				 <GenericTile
+				<GenericTile
                     class="sapUiTinyMarginBegin sapUiTinyMarginTop"
-                    header="{i18n>startpageUserReviewsTileTitle}">
+                    header="{i18n>startpageUserReviewsTileTitle}"
+                    press=".onNavToReviews">
                     <tileContent>
                         <TileContent>
                             <content>
@@ -87,7 +89,8 @@
                  <GenericTile
                     class="sapUiTinyMarginBegin sapUiTinyMarginTop"
                     header="{i18n>startpageTestResultsTileTitle}"
-                    subheader="{i18n>startpageTestResultsTileSubTitle}">
+                    subheader="{i18n>startpageTestResultsTileSubTitle}"
+                    press=".onNavToChartContainer">
                     <tileContent>
                         <TileContent>
                             <content>
